fixed letter-spacing in index

--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,7 @@ img {
     font-size: 48px;
     font-weight: bold;
     line-height: 42px;
+    letter-spacing: .01em;
 
     display: block;
 
@@ -417,6 +418,7 @@ li.catalog-navigation-item a {
     font-size: 47px;
     font-weight: bold;
     line-height: 1.2;
+    letter-spacing: .01em;
 
     color: #000;
 }
@@ -434,8 +436,10 @@ li.catalog-navigation-item a {
 
 .slide-short-desc {
     font: inherit;
+    letter-spacing: .01em;
 
     margin-bottom: 43px;
+    padding-right: 15px;
 }
 
 .btn-yellow {
@@ -593,6 +597,7 @@ li.catalog-navigation-item a {
     font-size: 18px;
     font-weight: bold;
     line-height: 1.2;
+    letter-spacing: .01em;
 
     width: 160px;
     padding-top: 175px;
@@ -694,6 +699,7 @@ li.catalog-navigation-item a {
     font-size: 47px;
     font-weight: bold;
     line-height: 1.2;
+    letter-spacing: .01em;
 
     margin-top: 70px;
     margin-bottom: 11px;
@@ -787,6 +793,7 @@ li.catalog-navigation-item a {
     font-size: 47px;
     font-weight: bold;
     line-height: 1.2;
+    letter-spacing: .01em;
 
     margin-top: 48px;
     margin-bottom: 39px;
@@ -1069,7 +1076,6 @@ li.catalog-navigation-item a {
     width: 4px;
     height: 7px;
 
-    content: '';
     content: '';
 
     background-image: url('../img/nav-arrow.svg');
@@ -1519,7 +1525,7 @@ main.container {
     margin-right: 20px;
     padding-top: 18px;
     padding-right: 20px;
-    padding-left: 20px;
+    padding-left: 5px;
 
     flex-shrink: 0;
     -webkit-box-pack: center;
@@ -1646,6 +1652,10 @@ main.container {
             justify-content: space-between;
 }
 
+.about-and-contacts p {
+	letter-spacing: 0;
+}
+
 .about,
 .contacts {
     position: relative;
@@ -1667,7 +1677,7 @@ main.container {
 
 .about p {
     margin: 30px 0;
-    padding-right: 75px;
+    padding-right: 85px;
 }
 
 .contacts p {
